--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 __pycache__/
-*.py[oc]
-build/
-dist/
-wheels/
-*.egg-info
+*.py[cod]
+*.pyo
+.venv/
 .env
-.venv
+db.sqlite3
+.log
+uv.lock
+.python-version
+.vscode/
+staticfiles/
+.DS_Store
 .idea
