--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,30 +3,31 @@ name = "hexlet-code"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 dependencies = [
-    "dj-database-url>=3.0.1",
-    "django>=5.2.4",
-    "django-bootstrap5==24.3",
+    "dj-database-url>=2.3.0",
+    "django>=5.2",
+    "django-bootstrap5>=25.1",
     "django-filter>=25.1",
+    "dotenv>=0.9.9",
     "gunicorn>=23.0.0",
+    "playwright>=0.1.0",
     "psycopg2-binary>=2.9.10",
-    "python-dotenv>=1.1.1",
+    "pytest>=8.4.0",
+    "pytest-playwright>=0.7.0",
+    "python-dotenv>=1.1.0",
     "rollbar>=1.3.0",
+    "ruff>=0.11.13",
     "whitenoise>=6.9.0",
 ]
-
-[dependency-groups]
-dev = [
-    "coverage>=7.10.2",
-    "pytest>=8.4.1",
-    "pytest-django>=4.11.1",
-    "ruff>=0.12.7",
-]
-
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["task_manager"]
+
+[tool.ruff]
+lint.select = ["E", "F", "W", "B", "I"]
+line-length = 88
+exclude = ["**/migrations/**", 'settings.py']
