--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,9 @@ services:
   web:
     build: .
     container_name: task_manager_web
-    command: python manage.py runserver 0.0.0.0:8000
+
+    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+
     volumes:
       - .:/app
     ports:
